--- a/src/app/compras/compras.component.html
+++ b/src/app/compras/compras.component.html
@@ -5,10 +5,7 @@
 <ul>
 
      @for (lente of comprasList$ | async ; track lente.modelo) {
-       <li> {{ lente.marca }}
-            {{ lente.modelo }}
-            {{ lente.precio }}
-            {{lente.cantidad}}
+       <li> {{ lente.marca }} : {{ lente.modelo }} : {{ lente.precio }} : {{lente.cantidad}}
       </li>
     } @empty {
         <li>No hay lentes para mostrar.</li>
